--- a/styless/portfolio.css
+++ b/styless/portfolio.css
@@ -251,9 +251,24 @@ footer input[type="text"], footer input[type="email"], footer textarea{
 
 @media screen and (max-width: 576px) {
 
-    .skills-container, .resume-container, footer, .about-items, .banner{
+    .skills-container, .resume-container, footer, nav, nav > ul,  .about-items, .banner{
 
         flex-direction: column;
+    }
+
+    nav > ul{
+
+        gap: 20px;
+    }
+
+    .btn-primary{
+
+        margin-bottom: 20px;
+    }
+
+    .banner{
+
+        margin: 20px;
     }
 
     footer, .about{
